--- a/CryptoConsultancy/templates/contact.html
+++ b/CryptoConsultancy/templates/contact.html
@@ -30,7 +30,7 @@
             {% for expert in experts %}
                 <tr>
                 <th scope="row">
-                    <a href="/expert/{{expert.id}}/" style="text-decoration: none;">{{ expert.name }}</a>
+                    <a href="/payment/{{expert.id}}/" style="text-decoration: none;">{{ expert.name }}</a>
                 </th>
                 <td>
                     {{ expert.experience }} 
