--- a/CryptoConsultancy/templates/agora.html
+++ b/CryptoConsultancy/templates/agora.html
@@ -122,6 +122,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pusher/7.0.3/pusher.min.js"></script>
     <script>
       window.pusher = new Pusher('5e72295100417fe7c808', {
+        cluster: "ap3",
         authEndpoint: "{% url 'agora-pusher-auth' %}",
         auth: {
           headers: {
