--- a/CryptoConsultancy/templates/includes/navigation.html
+++ b/CryptoConsultancy/templates/includes/navigation.html
@@ -1,11 +1,11 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
-      <div class="container-fluid">
+      <div class="container-fluid justify-content-end">
         <!-- Brand -->
-        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="/">Dashboard</a>
+        <!-- <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="/">Dashboard</a> -->
         <!-- Form -->
-        <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
+        <!-- <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
           <div class="form-group mb-0">
             <div class="input-group input-group-alternative">
               <div class="input-group-prepend">
@@ -14,7 +14,7 @@
               <input class="form-control" placeholder="Search" type="text">
             </div>
           </div>
-        </form>
+        </form> -->
         <!-- User -->
         <ul class="navbar-nav align-items-center d-none d-md-flex">
           <li class="nav-item dropdown">
@@ -31,7 +31,7 @@
               </div>
             </a>
             <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
-              <div class=" dropdown-header noti-title">
+              <!-- <div class=" dropdown-header noti-title">
                 <h6 class="text-overflow m-0">Welcome!</h6>
               </div>
               <a href="/profile.html" class="dropdown-item">
@@ -46,7 +46,7 @@
                 <i class="ni ni-support-16"></i>
                 <span>Support</span>
               </a>
-              <div class="dropdown-divider"></div>
+              <div class="dropdown-divider"></div> -->
               <a href="{% url 'logout' %}" class="dropdown-item">
                 <i class="ni ni-user-run"></i>
                 <span>Logout</span>
