--- a/CryptoConsultancy/templates/includes/sidenav.html
+++ b/CryptoConsultancy/templates/includes/sidenav.html
@@ -1,6 +1,6 @@
 
   <nav class="navbar navbar-vertical fixed-left navbar-expand-md navbar-light bg-white" id="sidenav-main">
-    <div class="container-fluid">
+    <div class="container justify-content-end">
       <!-- Toggler -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidenav-collapse-main" aria-controls="sidenav-main" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
             </div>
           </a>
           <div class="dropdown-menu dropdown-menu-arrow dropdown-menu-right">
-            <div class=" dropdown-header noti-title">
+            <!-- <div class=" dropdown-header noti-title">
               <h6 class="text-overflow m-0">Welcome!</h6>
             </div>
             <a href="/profile.html" class="dropdown-item">
@@ -51,8 +51,8 @@
             <a href="/profile.html" class="dropdown-item">
               <i class="ni ni-support-16"></i>
               <span>Support</span>
-            </a>
-            <div class="dropdown-divider"></div>
+            </a> -->
+            <!-- <div class="dropdown-divider"></div> -->
             <a href="{% url 'logout' %}" class="dropdown-item">
               <i class="ni ni-user-run"></i>
               <span>Logout</span>
@@ -79,7 +79,7 @@
           </div>
         </div>
         <!-- Form -->
-        <form class="mt-4 mb-3 d-md-none">
+        <!-- <form class="mt-4 mb-3 d-md-none">
           <div class="input-group input-group-rounded input-group-merge">
             <input type="search" class="form-control form-control-rounded form-control-prepended" placeholder="Search" aria-label="Search">
             <div class="input-group-prepend">
@@ -88,7 +88,7 @@
               </div>
             </div>
           </div>
-        </form>
+        </form> -->
         <!-- Navigation -->
         <ul class="navbar-nav">
           <li class="nav-item">
