Video call styling

--- a/CryptoConsultancy/templates/demo.html
+++ b/CryptoConsultancy/templates/demo.html
@@ -13,10 +13,15 @@
 
 {% block content %}
     <div class="container">
+        
         <div class="row mt-5">
+            
         <div class="col-xl-12 mb-5 mb-xl-0 "id="table-top">
+            <h1 class="ml-3 mb-5 mt-0">Index</h1>
             <div class="card shadow">
+                
             <div class="card-header border-0">
+                
                 <div class="row align-items-center">
                 <div class="col">
                     <h3 class="mb-0">Coins</h3>
