--- a/CryptoConsultancy/templates/includes/scripts.html
+++ b/CryptoConsultancy/templates/includes/scripts.html
@@ -5,6 +5,7 @@
   <!--   Optional JS   -->
   <script src="/static/assets/js/plugins/chart.js/dist/Chart.min.js"></script>
   <script src="/static/assets/js/plugins/chart.js/dist/Chart.extension.js"></script>
+  <script src="/static/assets/js/index.js"></script>
 
   <!--   Argon JS   -->
   <script src="/static/assets/js/argon-dashboard.js?v=1.1.0"></script>
@@ -16,3 +17,4 @@
 
   <!-- apexcharts-->
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+  
