--- a/CryptoConsultancy/templates/agora.html
+++ b/CryptoConsultancy/templates/agora.html
@@ -1,7 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+   <head> 
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,29 +20,36 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="{% static 'assets/css/argon-dashboard.css' %}">
     <link
       rel="stylesheet"
       type="text/css"
       href="{% static 'assets/css/index.css' %}"
     />
     <script src="https://cdn.agora.io/sdk/release/AgoraRTCSDK-3.3.1.js"></script>
-    <title>Agora Video Chat Django</title>
+    <meta name="keywords" content="Video Call, Agora, Django, Real Time Engagement" />
+    <meta name="author" content="Kofi Obrasi Ocran" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/index.css' %}" />
+    <script src="https://cdn.agora.io/sdk/release/AgoraRTCSDK-3.3.1.js"></script>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+    <!-- Icons -->
+    <link href="/static/assets/js/plugins/nucleo/css/nucleo.css" rel="stylesheet" />
+    <link href="/static/assets/js/plugins/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
+    <!-- CSS Files -->
+    <link href="/static/assets/css/argon-dashboard.css?v=1.1.0" rel="stylesheet" />
+    <title>CryptoAnalysis</title>
   </head>
   <body>
-    <main id="app">
-      <main>
-        <div class="container">
-          <div class="row">
-            <div class="col-12 text-center">
-              <img
-                src="{% static 'agora/agora-logo.png' %}"
-                alt="Agora Logo"
-                class="block img-fuild"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="container my-5">
+    {% include 'includes/sidenav.html' %}
+    {% include 'includes/navigation.html' %}
+    {% block content %}
+    <main id="app" style="margin-top:0;padding-top:0;height:fit-content">
+      
+      <main style="margin-top:0;padding-top:0;">
+        <div class="container my-5" style="margin-right:2rem; padding-top:0;">
+        <h3 class="mb-4">Video Call</h3>
           <div class="row">
             <div class="col">
               <div class="btn-group" role="group">
@@ -54,7 +61,7 @@
                   @click="placeCall('{{singleUser.id}}','{{singleUser}}')"
                 >
                   Call {{ singleUser }}
-                  <span class="badge badge-light"
+                  <span class="badge badge-light" style="color:white;"
                     >${ getUserOnlineStatus({{singleUser.id}})}</span
                   >
                 </button>
@@ -116,9 +123,11 @@
 
         </section>
       </main>
+    
     </main>
+    {% endblock %}
     <!-- Add Scripts -->
-
+    {% block javascript%}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pusher/7.0.3/pusher.min.js"></script>
     <script>
       window.pusher = new Pusher('5e72295100417fe7c808', {
@@ -136,9 +145,13 @@
       const CSRF_TOKEN = "{{ csrf_token }}"
     </script>
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js""
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="{% static 'assets/js/index.js' %}"></script>
+    {% endblock %}
   </body>
 </html>
+
+
+
