--- a/CryptoConsultancy/templates/layouts/base.html
+++ b/CryptoConsultancy/templates/layouts/base.html
@@ -4,6 +4,32 @@
 {% load static %}
 
 <head>
+
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Build A Scalable Video Chat Application With Agora"
+    />
+    <meta
+      name="keywords"
+      content="Video Call, Agora, Django, Real Time Engagement"
+    />
+    <meta name="author" content="Kofi Obrasi Ocran" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'assets/css/index.css' %}"
+    />
+    <script src="https://cdn.agora.io/sdk/release/AgoraRTCSDK-3.3.1.js"></script>
+    <title>Agora Video Chat Django</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -13,6 +39,17 @@
   <!-- Favicon - loaded as static -->
   <!-- <link href="{% static 'assets/img/brand/favicon.png' %}" rel="icon" type="image/png"> -->
   
+
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Build A Scalable Video Chat Application With Agora"
+  />
+  <meta name="keywords" content="Video Call, Agora, Django, Real Time Engagement" />
+  <meta name="author" content="Kofi Obrasi Ocran" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"/>
+  <link rel="stylesheet" type="text/css" href="{% static 'assets/css/index.css' %}" />
+  <script src="https://cdn.agora.io/sdk/release/AgoraRTCSDK-3.3.1.js"></script>
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
   <!-- Icons -->
@@ -22,8 +59,15 @@
   <link href="/static/assets/css/argon-dashboard.css?v=1.1.0" rel="stylesheet" />
 
   <!-- Specific CSS goes HERE -->
-  
-  {% block stylesheets %}{% endblock stylesheets %}
+ 
+
+  {% block stylesheets %}
+  <style>
+    body{
+      margin-bottom: 1rem !important;
+    }
+  </style>
+  {% endblock stylesheets %}
 
 </head>
 
